# webnn-native-1

./: .gitignore  BUILD.gn  DEPS  dawn.json  webnn.json
.github/workflows/: build_test_dml.yml  build_test_node_dml.yml  build_test_node_openvino_linux.yml  build_test_node_openvino_windows.yml  build_test_null.yml  build_test_onednn_linux.yml  build_test_onednn_windows.yml  build_test_openvino_linux.yml  build_test_openvino_windows.yml  clang_format_check.yml
build_overrides/: dawn.gni
examples/: SampleUtils.cpp  SampleUtils.h
examples/LeNet/: LeNet.cpp  LeNet.h  Main.cpp
generator/: dawn_json_generator.py  generator_lib.py  generator_utils.py  jinja_test.py
generator/templates/: api.h  api_cpp.h  dawn_proc_table.h  dawn_thread_dispatch_proc.cpp  showpersons.txt  target_api.h  webgpu.h  webnn.h  webnn_cpp.cpp  webnn_cpp.h  webnn_proc.c
generator/templates/base/: dawn.h
generator/templates/dawn_native/: ChainUtils.cpp  ChainUtils.h  ObjectType.cpp  ProcTable.cpp  ValidationUtils.cpp  ValidationUtils.h  api_absl_format.cpp  api_absl_format.h  api_structs.cpp  api_structs.h  dawn_platform.h  wgpu_structs.cpp  wgpu_structs.h
generator/templates/utils/: dawn.h
generator/templates/webnn_native/: ProcTable.cpp  webnn_platform.h
generator/webnn/: webnn_json_generator.py
generator/webnn/templates/: webnn.h  webnn_cpp.h
node/: node_setup.js
scripts/: dawn_overrides_with_defaults.gni  standalone.gclient  webnn_features.gni
src/common/: BUILD.gn
src/dawn_native/: BUILD.gn  ErrorCommon.h  ErrorData.cpp  ErrorData.h  ErrorScope.h  ErrorScopeCommon.h  webgpu_absl_format.h
src/include/webnn_native/: WebnnNative.h
src/include/webnn_wire/: WireClient.h  WireServer.h
src/tests/: WebnnTest.cpp  WebnnTest.h
src/tests/end2end/: AddTests.cpp  Conv2dTests.cpp  MatMulTests.cpp  MulTests.cpp  Pool2dTests.cpp  ReluTests.cpp  ReshapeTests.cpp  SoftmaxTests.cpp  TransposeTests.cpp
src/tests/unittests/: GetProcAddressTests.cpp
src/webnn/: BUILD.gn  webnn.json  webnn_generator.gni
src/webnn/common/: BUILD.gn
src/webnn/examples/: BUILD.gn  SampleUtils.cpp  SampleUtils.h
src/webnn/examples/LeNet/: LeNet.cpp
src/webnn/examples/MobileNetV2/: MobileNetV2.cpp  MobileNetV2.h
src/webnn/examples/ResNet/: Main.cpp  ResNet.cpp  ResNet.h
src/webnn/tests/: BUILD.gn  End2EndTestsMain.cpp  WebnnTest.cpp
src/webnn/tests/end2end/: AddTests.cpp  BatchNormTests.cpp  ClampTests.cpp  ConcatTests.cpp  Conv2dTests.cpp  DivTests.cpp  ElementWiseUnaryTests.cpp  GemmTests.cpp  GruTests.cpp  HardSwishTests.cpp  InstanceNormTests.cpp  LeakyReluTests.cpp  MatMulTests.cpp  MaxTests.cpp  MinTests.cpp  MulTests.cpp  PadTests.cpp  Pool2dTests.cpp  PowTests.cpp  ReduceTests.cpp  ReluTests.cpp  Resample2dTests.cpp  ReshapeTests.cpp  SigmoidTests.cpp  SliceTests.cpp  SoftmaxTests.cpp  SplitTests.cpp  SqueezeTests.cpp  SubTests.cpp  TanhTests.cpp  TransposeTests.cpp
src/webnn/tests/end2end/models/: MobileNetV2BatchNormNchw.cpp  MobileNetV2Nchw.cpp  MobileNetV2Nhwc.cpp  ResNetNchw.cpp  ResNetNhwc.cpp  SqueezeNetNchw.cpp  SqueezeNetNhwc.cpp
src/webnn/tests/unittests/validation/: BinaryValidationTests.cpp  Conv2dValidationTests.cpp  ErrorScopeValidationTests.cpp  GraphValidationTests.cpp  PoolValidationTests.cpp  ReshapeValidationTests.cpp  TransposeValidationTests.cpp  UnaryValidationTests.cpp  ValidationTest.cpp  ValidationTest.h
src/webnn/webnn_native/: BUILD.gn  BackendConnection.cpp  BackendConnection.h  Context.cpp  Context.h  Error.cpp  Error.h  ErrorScopeDawn.h  Forward.h  FusionOperator.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  Instance.cpp  Instance.h  Operand.cpp  Operand.h  OperandArray.h  Operator.cpp  Operator.h  OperatorArray.h  Utils.cpp  WebnnNative.cpp  webnn_platform.h
src/webnn_native/: BUILD.gn  Context.cpp  Context.h  ErrorData.h  Forward.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  MLContext.cpp  MLContext.h  MLGraph.cpp  MLGraph.h  MLGraphBuilder.cpp  MLGraphBuilder.h  MLNamedInputs.h  MLNamedOperands.h  MLNamedOutputs.h  MLNamedResults.h  MLOperand.cpp  MLOperand.h  MLResult.cpp  MLResult.h  ObjectBase.cpp  ObjectBase.h  Operand.h  WebnnNative.cpp
src/webnn_native/dml/: BackendDML.cpp  BackendDML.h  ContextDML.cpp  ContextDML.h  GraphDML.cpp  GraphDML.h
src/webnn_native/mlas/: GraphMLAS.cpp
src/webnn_native/null/: ContextNull.cpp  ContextNull.h
src/webnn_native/onednn/: GraphDNNL.cpp
src/webnn_native/openvino/: ContextIE.cpp  ContextIE.h  GraphIE.cpp  GraphIE.h
src/webnn_native/ops/: Binary.cpp  Binary.h  Constant.h  Conv2d.cpp  Conv2d.h  Input.h  Pad.cpp  Pad.h  Pool2d.cpp  Pool2d.h  Reduce.h  Reshape.h  Transpose.h  Unary.h
src/webnn_native/xnnpack/: GraphXNN.cpp
src/webnn_wire/: BUILD.gn  WireClient.cpp  WireServer.cpp
src/webnn_wire/client/: Client.cpp  Client.h  ClientDoers.cpp  ClientInlineMemoryTransferService.cpp  Context.cpp  GraphBuilder.cpp  GraphBuilder.h  NamedInputs.cpp  NamedOutputs.cpp  NamedOutputs.h  OperandArray.cpp
src/webnn_wire/server/: Server.cpp  Server.h  ServerGraph.cpp  ServerGraphBuilder.cpp  ServerInlineMemoryTransferService.cpp  ServerNamedInputs.cpp  ServerNamedOutputs.cpp
webnn/: BUILD.gn  webnn.json
webnn/examples/: BUILD.gn  SampleUtils.h
webnn/examples/LeNet/: LeNet.h  Main.cpp
webnn/examples/MobileNetV2/: Main.cpp
webnn/examples/SqueezeNet/: Main.cpp  SqueezeNet.cpp  SqueezeNet.h
webnn/generator/: webnn_generator.gni
webnn/node/: README.md  binding.gyp
webnn/scripts/: webnn_features.gni  webnn_overrides_with_defaults.gni
webnn/src/common/: BUILD.gn
webnn/src/tests/: BUILD.gn  WebnnTest.h
webnn/src/webnn/: BUILD.gn
webnn/src/webnn_native/: BUILD.gn  BackendConnection.cpp  BackendConnection.h  Context.cpp  Context.h  Error.cpp  Error.h  ErrorDawn.h  ErrorScope.h  ErrorScopeDawn.h  Forward.h  FusionOperator.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  Instance.cpp  Instance.h  NamedInputs.h  NamedOperands.h  NamedOutputs.h  ObjectBase.cpp  ObjectBase.h  (+7 more)
webnn/workflow_scripts/: build_test_node_openvino_linux.yml  build_test_openvino_linux.yml
(+133 files in other folders)
